Add readme and license

--- a/example.env
+++ b/example.env
@@ -1,4 +1,19 @@
-# Nintendo session token
-NT_SESSION_TOKEN=""
-# WeChat ID of admin (starts with "@")
-ADMIN_WECHAT_ID=""
+# NSO session token
+NT_SESSION_TOKEN="your_session_token_here"
+
+# WeChat nickname of admin (optional).
+ADMIN_WECHAT_NICKNAME="wechat_nickname_here"
+
+# Room names of groups to respond to
+# (optional, by default the bot will respond to
+#  all groups)
+ROOM_NAMES="room_id_1,room_id_2"
+
+# Query throttling in milliseconds
+# (optional, default is 10000)
+QUERY_THROTTLE=10000
+
+# Query command format
+# Use "{@selfName}" to represent '@<bot>'
+# (optional, default is '{@selfName}')
+QUERY_COMMAND_FORMAT="{@selfName} query"
