Support schedule queries, support language setting

--- a/.env.example
+++ b/.env.example
@@ -16,4 +16,4 @@ QUERY_THROTTLE=10000
 # Query command format
 # Use "{@selfName}" to represent '@<bot>'
 # (optional, default is '{@selfName}')
-QUERY_COMMAND_FORMAT="{@selfName} query"
+QUERY_LAST_WORK_COMMAND_FORMAT="{@selfName} query"
