Update example env file

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,40 @@
 # NSO session token
 NT_SESSION_TOKEN="your_session_token_here"
 
-# WeChat nickname of admin (optional).
+# WeChat nickname of admin
+# (optional).
 ADMIN_WECHAT_NICKNAME="wechat_nickname_here"
 
-# Room names of groups to respond to
+# Names of groups to respond to
 # (optional, by default the bot will respond to
 #  all groups)
-ROOM_NAMES="room_id_1,room_id_2"
+ROOM_NAMES="room_1,room_2"
 
 # Query throttling in milliseconds
 # (optional, default is 10000)
 QUERY_THROTTLE=10000
 
-# Query command format
-# Use "{@selfName}" to represent '@<bot>'
+# Query last work's detail command format
+# Use '{@selfName}' to represent '@bot_nickname'
 # (optional, default is '{@selfName}')
-QUERY_LAST_WORK_COMMAND_FORMAT="{@selfName} query"
+QUERY_LAST_WORK_COMMAND_FORMAT="{@selfName}"
+
+# Query work schedule command format
+# (optional, default is '{@selfName} schedule')
+QUERY_SCHEDULE_COMMAND_FORMAT="{@selfName} schedule"
+
+# Data save directory
+# (optional, default is './data/work/')
+DATA_SAVE_PATH="./data/work/"
+
+# Show the username of the player in statistics
+# (optional, default is false)
+SHOW_PLAYER_NAME=true
+
+# Timezone
+# (optional, default is 'Asia/Shanghai')
+TIMEZONE="America/New_York"
+
+# Language
+# (optional, default is account language)
+LANGUAGE="zh-CN"
