--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.5",
+    "mathjs": "^13.2.0",
     "nxapi": "^1.6.1",
     "wechaty": "^1.20.2"
   },
